force-app/main/default/objects/Journal__c/Journal__c.object-meta.xml
<CustomObject>
    <label>Journal</label>
    <nameField>
        <displayFormat>J#{000000000}</displayFormat>
        <label>Journal #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>