force-app/main/default/objects/Journal__c/fields/IsAllocated__c.field-meta.xml
<CustomField>
    <fullName>IsAllocated__c</fullName>
    <formula>AND(Credit__c == Debit__c,Credit__c &gt; 0,Credit__c &gt; 0) &amp;&amp;
AND(!ISPICKVAL(Type__c,&apos;TBD&apos;), !ISPICKVAL(Sub_Type__c,&apos;TBD&apos;))</formula>
    <label>Allocated?</label>
    <type>Checkbox</type>
</CustomField>