force-app/main/default/objects/Journal__c/fields/IsReconciled__c.field-meta.xml
<CustomField>
    <fullName>IsReconciled__c</fullName>
    <formula>IF(AND(Credit__c == Debit__c,Credit__c &gt; 0,Credit__c &gt; 0), true, false)</formula>
    <label>Reconciled?</label>
    <type>Checkbox</type>
</CustomField>