force-app/main/default/objects/Journal__c/fields/Journal_Id__c.field-meta.xml
<CustomField>
    <fullName>Journal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Journal Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>