force-app/main/default/objects/Journal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Reversal</fullName>
            </value>
            <value>
                <fullName>Opening</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>